# photoframe

./: .dockerignore  .env.example  .gitignore  AI-SDLC.md  Dockerfile  README.md  docker-compose.yml
.cursor/: BUGBOT.md  cli.json  hooks.json
.githooks/: pre-commit
.github/: pull_request_template.md
client/: .gitignore  .gitkeep  TESTING.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
config/: README.md  api-paths.ts  ports.env  ports.json  ports.ts
docker/: entrypoint.sh  nginx.conf
scripts/: setup-git-hooks.sh
server/: .dockerignore  Dockerfile  TESTING.md  pyproject.toml
server/app/: config.py  logging_setup.py  main.py  models.py  ports.py
server/app/api/: __init__.py  health.py
server/app/api/v0/: __init__.py  photo_id.py  photo_library_http.py  photos.py
server/app/photo_source/: __init__.py  base.py  errors.py  factory.py  httpx_errors.py  photoprism.py  photoprism_normalize.py
server/scripts/: ci_client_e2e_stack.py  dev_server.sh
server/tests/: conftest.py  test_photo_source_factory.py  test_photoprism_adapter.py  test_routes.py
server/tests/fixtures/: README.md  photoprism_photos_e2e.json
server/tests/integration/: conftest.py  test_photos_api.py
server/tests/support/: api_client.py  mock_photoprism_server.py  photoframe_stack.py  photoprism.py
server/tests/unit/: test_cors.py  test_httpx_errors.py  test_photo_id.py  test_photo_library_http.py  test_photoprism_adapter.py  test_photoprism_normalize.py  test_ports.py  test_static_ui_mount.py
(+102 files in other folders)
