[project]
name = "photoframe-server"
version = "0.1.0"
description = "Stateless FastAPI proxy backing the photoframe slideshow client."
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.136.1,<1.0",
    "uvicorn[standard]>=0.46.0,<1.0",
    "httpx>=0.28.1,<1.0",
    "pydantic-settings>=2.14.0,<3.0",
    "structlog>=25.5.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "respx>=0.23.1,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["tests"]
markers = [
    "live: optional live-only diagnostics (set PHOTOFRAME_LIVE_TEST=1; server must be running)",
]
